// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppInstallationSection should match a snapshot when SPECIFIC_OFFICE_GROUPS is selected 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.h2
        classname="el-text-base"
      >
        Installation
      </mock-styled.h2>
      <mock-styled.p
        classname="el-text-base el-has-grey-text el-has-section-margin"
      >
        Please select the type of installation you require for this app:
      </mock-styled.p>
      <mock-styled.div
        classname="el-form-layout-has-margin"
      >
        <mock-styled.div>
          <mock-styled.div
            classname="el-mb5"
          >
            <mock-styled.input
              checked="false"
              classname=""
              id="WHOLE_ORG"
              type="checkbox"
            />
            <mock-styled.label
              htmlfor="WHOLE_ORG"
            >
              Install for the whole of your organisation
            </mock-styled.label>
          </mock-styled.div>
          <mock-styled.p
            classname="el-text-base"
          >
            This will grant the app access to all data for all users and offices across your organisation
          </mock-styled.p>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div
            classname="el-mb5"
          >
            <mock-styled.input
              checked="true"
              classname=""
              id="SPECIFIC_OFFICE_GROUPS"
              type="checkbox"
            />
            <mock-styled.label
              htmlfor="SPECIFIC_OFFICE_GROUPS"
            >
              Install for specific office groups
            </mock-styled.label>
          </mock-styled.div>
          <mock-styled.p
            classname="el-text-base"
          >
            This will grant the app access to only data for the specific offices inside of each office group
          </mock-styled.p>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="el-mb7"
      >
        <mock-styled.div
          classname="el-button-group-align-right"
        >
          <mock-styled.button
            classname="el-intent-primary"
            disabled="false"
          >
            <mock-styled.div />
            Save
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.h2
      classname="el-text-base"
    >
      Installation
    </mock-styled.h2>
    <mock-styled.p
      classname="el-text-base el-has-grey-text el-has-section-margin"
    >
      Please select the type of installation you require for this app:
    </mock-styled.p>
    <mock-styled.div
      classname="el-form-layout-has-margin"
    >
      <mock-styled.div>
        <mock-styled.div
          classname="el-mb5"
        >
          <mock-styled.input
            checked="false"
            classname=""
            id="WHOLE_ORG"
            type="checkbox"
          />
          <mock-styled.label
            htmlfor="WHOLE_ORG"
          >
            Install for the whole of your organisation
          </mock-styled.label>
        </mock-styled.div>
        <mock-styled.p
          classname="el-text-base"
        >
          This will grant the app access to all data for all users and offices across your organisation
        </mock-styled.p>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div
          classname="el-mb5"
        >
          <mock-styled.input
            checked="true"
            classname=""
            id="SPECIFIC_OFFICE_GROUPS"
            type="checkbox"
          />
          <mock-styled.label
            htmlfor="SPECIFIC_OFFICE_GROUPS"
          >
            Install for specific office groups
          </mock-styled.label>
        </mock-styled.div>
        <mock-styled.p
          classname="el-text-base"
        >
          This will grant the app access to only data for the specific offices inside of each office group
        </mock-styled.p>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div
      classname="el-mb7"
    >
      <mock-styled.div
        classname="el-button-group-align-right"
      >
        <mock-styled.button
          classname="el-intent-primary"
          disabled="false"
        >
          <mock-styled.div />
          Save
        </mock-styled.button>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallationSection should match a snapshot when WHOLE_ORG is selected 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.h2
        classname="el-text-base"
      >
        Installation
      </mock-styled.h2>
      <mock-styled.p
        classname="el-text-base el-has-grey-text el-has-section-margin"
      >
        Please select the type of installation you require for this app:
      </mock-styled.p>
      <mock-styled.div
        classname="el-form-layout-has-margin"
      >
        <mock-styled.div>
          <mock-styled.div
            classname="el-mb5"
          >
            <mock-styled.input
              checked="true"
              classname=""
              id="WHOLE_ORG"
              type="checkbox"
            />
            <mock-styled.label
              htmlfor="WHOLE_ORG"
            >
              Install for the whole of your organisation
            </mock-styled.label>
          </mock-styled.div>
          <mock-styled.p
            classname="el-text-base"
          >
            This will grant the app access to all data for all users and offices across your organisation
          </mock-styled.p>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div
            classname="el-mb5"
          >
            <mock-styled.input
              checked="false"
              classname=""
              id="SPECIFIC_OFFICE_GROUPS"
              type="checkbox"
            />
            <mock-styled.label
              htmlfor="SPECIFIC_OFFICE_GROUPS"
            >
              Install for specific office groups
            </mock-styled.label>
          </mock-styled.div>
          <mock-styled.p
            classname="el-text-base"
          >
            This will grant the app access to only data for the specific offices inside of each office group
          </mock-styled.p>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="el-mb7"
      >
        <mock-styled.div
          classname="el-button-group-align-right"
        >
          <mock-styled.button
            classname="el-intent-primary"
            disabled="true"
          >
            <mock-styled.div />
            Save
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.h2
      classname="el-text-base"
    >
      Installation
    </mock-styled.h2>
    <mock-styled.p
      classname="el-text-base el-has-grey-text el-has-section-margin"
    >
      Please select the type of installation you require for this app:
    </mock-styled.p>
    <mock-styled.div
      classname="el-form-layout-has-margin"
    >
      <mock-styled.div>
        <mock-styled.div
          classname="el-mb5"
        >
          <mock-styled.input
            checked="true"
            classname=""
            id="WHOLE_ORG"
            type="checkbox"
          />
          <mock-styled.label
            htmlfor="WHOLE_ORG"
          >
            Install for the whole of your organisation
          </mock-styled.label>
        </mock-styled.div>
        <mock-styled.p
          classname="el-text-base"
        >
          This will grant the app access to all data for all users and offices across your organisation
        </mock-styled.p>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div
          classname="el-mb5"
        >
          <mock-styled.input
            checked="false"
            classname=""
            id="SPECIFIC_OFFICE_GROUPS"
            type="checkbox"
          />
          <mock-styled.label
            htmlfor="SPECIFIC_OFFICE_GROUPS"
          >
            Install for specific office groups
          </mock-styled.label>
        </mock-styled.div>
        <mock-styled.p
          classname="el-text-base"
        >
          This will grant the app access to only data for the specific offices inside of each office group
        </mock-styled.p>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div
      classname="el-mb7"
    >
      <mock-styled.div
        classname="el-button-group-align-right"
      >
        <mock-styled.button
          classname="el-intent-primary"
          disabled="true"
        >
          <mock-styled.div />
          Save
        </mock-styled.button>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
